<resources>
    <string name="app_name">My Places</string>
    <string name="addNewPlace">Add a new Place</string>
    <string name="viewPlacesList">View Places List</string>
    <string name="deleteAllPlaces">Delete All Places</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="heading">Add Place</string>
    <string name="btnAddPlace">Add place</string>
    <string name="btnClose">Close</string>
    <string name="btnRedirect">Add New Place</string>
    <string name="noPlaceWarning">No Place Exist</string>
</resources>